--- a/sass/main.sass
+++ b/sass/main.sass
@@ -58,6 +58,8 @@ h1
   margin: 10px 0
   text-shadow: none
   line-height: 132%
+  overflow-x: scroll
+  font-size: 16px
 
 // Structure Related CSS
 .container
@@ -176,6 +178,8 @@ blockquote
   padding-left: 20px
   border-left: 3px solid #CCC
   margin: 20px 0
+  font-style: italic
+  font-weight: bold
 
 p
   margin: 20px 0
