--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,6 @@ p {
 
 a {
   text-decoration: none;
-  font-weight: bold;
   color: #89a6a8; }
   a:hover {
     color: #a6bcbe; }
@@ -190,7 +189,7 @@ h1 {
     margin: 10px 0; }
 
 .post {
-  padding: 10px 0 70px 0;
+  padding: 10px 0 50px 0;
   color: #3b3f3f;
   font-size: 20px; }
   .post .caption {
@@ -306,7 +305,7 @@ h3 {
 
 #footer {
   width: 100%;
-  background: rgba(35, 35, 35, 0.5);
+  background: rgba(35, 35, 35, 0.6);
   padding: 20px 0;
   color: #d2d3ca;
   position: relative;
@@ -314,6 +313,8 @@ h3 {
   margin-bottom: 0px;
   height: 180px;
   clear: both; }
+  #footer p {
+    font-size: 18px; }
   #footer .navigation {
     display: inline-block;
     float: none; }
@@ -334,7 +335,8 @@ strong {
   font-weight: bold; }
 
 li {
-  margin: 5px 0; }
+  margin: 20px 0;
+  line-height: 28px; }
 
 ul {
   list-style: disc;
