--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
     <div id="footer">
       <div class="container">
         <img src="http://api.twitter.com/1/users/profile_image/choxi.png?size=bigger">
-        <p> Hey my name's Roshan, I'm the Cofounder and CTO of <a href="http://trybloc.com">Bloc</a>.</p>
+        <p> Hey my name's Roshan, I'm the Cofounder and CTO of <a href="http://bloc.io">Bloc</a>.</p>
         <p> You should follow me on Twitter <a href="http://twitter.com/choxi">here</></p>
         <div class="navigation_links">
           <a href="/blog.html"><div class="navigation blog"></div></a>
