--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,9 @@
 ---
 
 <div class="post">
+  <h4 class="published_at">{{ page.date | date:"%B %e, %Y" }}</h4>
+  <h4 class="author"> by Roshan Choxi </h4>
+  <div class="clear"></div>
   <h1>{{ page.title}}</h1>
-  <h4>{{ page.date | date:"%B %e, %Y" }}</h4>
   {{ content }}
 </div>
