--- a/css/main.css
+++ b/css/main.css
@@ -200,6 +200,10 @@ h1 {
     display: block;
     margin: 0 auto;
     border: 4px solid rgba(0, 0, 0, 0.5); }
+  .post h4.published_at {
+    float: left; }
+  .post h4.author {
+    float: right; }
   .post h1, .post h4 {
     text-align: center; }
   .post h1 {
