--- a/sass/main.sass
+++ b/sass/main.sass
@@ -154,6 +154,10 @@ h1
     display: block
     margin: 0 auto
     border: 4px solid rgba(0,0,0,0.5)
+  h4.published_at
+    float: left
+  h4.author
+    float: right
   h1, h4
     text-align: center
   h1
